# 2017_nuc

./: README.md  src.kdev4
.kdev4/: src.kdev4
Onboard-SDK-ROS/dji_sdk/: CMakeLists.txt
Onboard-SDK-ROS/dji_sdk_demo/: CMakeLists.txt  package.xml
boundary_detect/: CMakeLists.txt  README.md  package.xml
boundary_detect/msg/: Boundary.msg
boundary_detect/src/: SVM_HOG.xml  SVM_HOG_20170821.xml  SVM_HOG_BHU3rd.xml  main_SidelineDetecter_SVM_final.cpp
fisheye/: CMakeLists.txt  package.xml
fisheye/data/: camera.yml  camera1.yml.rat
fisheye/include/fisheye/: affine.hpp
fisheye/src/: fisheye_node.cpp  fisheye_node.cpp.rat
iarc_mission/: CMakeLists.txt  README.md  package.xml  parameter.xml
iarc_mission/launch/: bag.launch  exportVideoFromBag.launch  iarc_mission.launch
iarc_mission/src/: IARCMission.cpp  IARCMission_ros.cpp  pub_goal_pose.cpp
iarc_mission/srv/: TG.srv
iarc_tf/: CMakeLists.txt  README.md  ned_world_dynamic.cpp  package.xml
iarc_tf/launch/: local_position_rectified.launch  ned_world_dynamic.launch
iarc_tf/src/: .kdev_include_paths  boundary_transform.cpp  ned_world_broadcaster.cpp  ned_world_broadcaster_node.cpp  ned_world_dynamic.cpp  ned_world_dynamic_node.cpp  ned_world_ground_frame.cpp  ned_world_ground_frame_node.cpp  ned_world_transform.cpp  ned_world_velocity_transform.cpp  ned_world_velocity_transform_client.cpp  ned_world_velocity_transform_client_node.cpp
iarc_tf/srv/: Boundary.srv  NedWorldTransform.srv  Velocity.srv
irobot_detect/: CMakeLists.txt  package.xml
irobot_detect/launch/: irobot-detect.launch
irobot_detect/msg/: Pose3D.msg
irobot_detect/src/: irobotDetect.cpp  irobotDetect_node.cpp  shapeContext.cpp  shapeRecg.cpp  shapeRecg.cpp.rat
multirobot_detect_iarc/: .gitignore  CMakeLists.txt  README.md  package.xml
multirobot_detect_iarc/launch/: multirobot_detect_iarc.launch
multirobot_detect_iarc/msg/: RobotCamPos.msg
multirobot_detect_iarc/src/: SVM_HOG_Detect.xml  parameter.h  (+2 more)
obstacle_avoidance/: CMakeLists.txt  package.xml
obstacle_avoidance/include/obstacle_avoidance/: LIDAR.h  obstacleAvoidance.h
obstacle_avoidance/launch/: obstacle-avoidance.launch
obstacle_avoidance/msg/: velocityPosition.msg
obstacle_avoidance/src/: LIDAR.cpp  obstacleAvoidance.cpp  obstacleAvoidance.cpp.bak  obstacle_avoidance_node.cpp
pub_campos_test_py/: CMakeLists.txt  package.xml
trajectorygenerator/: CMakeLists.txt  README.md  package.xml
video_publisher_py/: CMakeLists.txt  README.md  package.xml
video_writer_py/: CMakeLists.txt  README.md  package.xml
(+30 files in other folders)
